hello-world/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-vs
spec:
  hosts:
  - "*" # wildcard host to match all inbound HTTP traffic
  gateways:
  - hello-world-gateway
  http:
  - route:
    - destination:
        host: hello-world-service
        port:
          number: 80
